@@ -3,7 +3,6 @@ package view;
 import controller.Controller;
 import javafx.animation.ParallelTransition;
 import javafx.event.ActionEvent;
-import javafx.event.Event;
 import javafx.event.EventHandler;
 import javafx.geometry.Insets;
 import javafx.geometry.Point2D;
@@ -23,10 +22,8 @@ import javafx.scene.text.Font;
 import javafx.util.Duration;
 import javafx.util.StringConverter;
 import model.*;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Set;
 
+import java.util.*;
 
 
 import javafx.scene.control.Button;
@@ -43,6 +40,7 @@ public class MenuPane extends AnchorPane {
     private MouseEvent hoveredEvent;
     private int result;
     private HBox trafficPartTabContent;
+    private VBox factoryTabContent;
 
     private boolean selectTrafficLineStationsMode = false;
     private TrafficLinePopup trafficLinePopup;
@@ -77,6 +75,8 @@ public class MenuPane extends AnchorPane {
         }
         createTrafficpartTab();
 
+        createFactoryTab();
+
     }
 
     private void createTrafficpartTab(){
@@ -86,6 +86,30 @@ public class MenuPane extends AnchorPane {
         tabContents.add(box);
         addTab(name, box, false);
         trafficPartTabContent = box;
+    }
+
+    private void createFactoryTab() {
+        String name = "factory";
+        VBox box = new VBox(10);
+        box.setPrefHeight(120);
+        box.setPadding(new Insets(5, 20, 5, 20));
+        tabNames.add(name);
+        tabContents.add(box);
+        addTab(name, box, false);
+        factoryTabContent = box;
+        Label factoryNameLabel = new Label();
+        Label productionLabel = new Label();
+        Label consumptionLabel = new Label();
+        factoryNameLabel.setFont(new Font("Arial", 15));
+        box.getChildren().add(factoryNameLabel);
+        productionLabel.setFont(new Font("Arial", 15));
+        box.getChildren().add(productionLabel);
+        consumptionLabel.setFont(new Font("Arial", 15));
+        box.getChildren().add(consumptionLabel);
+        factoryNameLabel.setText("factory name: not selected");
+        productionLabel.setText("production: nothing");
+        consumptionLabel.setText("consumption: nothing");
+        view.setFactoryLabels(factoryNameLabel, productionLabel, consumptionLabel);
     }
 
     /**
@@ -180,9 +204,15 @@ public class MenuPane extends AnchorPane {
         // Get Buildmenus from Controller
         Set<String> buildmenus = controller.getBuildmenus();
 
-        tabNames.addAll(List.of("speed"));
+        // it was before 21.02.2021
+        // tabNames.addAll(List.of("speed"));
+        tabNames.addAll(Collections.singletonList("speed"));
+
         tabNames.addAll(buildmenus);
-        tabNames.addAll(List.of("height", "vehicles", "remove"));
+
+        // it was before 21.02.2021
+        // tabNames.addAll(List.of("height", "vehicles", "remove"));
+        tabNames.addAll(Arrays.asList("height", "vehicles", "remove"));
 
         // dummys:
         for (int i = 0; i < tabNames.size(); i++) {
